--- a/pages/cadastroUsuario.html
+++ b/pages/cadastroUsuario.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cadastro Digimon</title>
+    <title>>Cadastro - Digimon Revolution Online</title>
     <link href="../css/cadastroUsuario.css" rel="stylesheet" type="text/css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
