--- a/pages/login.html
+++ b/pages/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Digimon Revolution Online</title>
     <link rel="stylesheet" href="../css/login.css">
-    <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
     <div class="container">
@@ -14,11 +14,11 @@
             <form id="loginForm">
                 <div class="input-group">
                     <label for="username">Usuário</label>
-                    <input type="text" id="username" placeholder="Digite aqui seu usuário" value="usuario1" name="username" required>
+                    <input type="text" id="username" placeholder="Digite aqui seu usuário" value="teste" name="username" required>
                 </div>
                 <div class="input-group">
                     <label for="password">Senha</label>
-                    <input type="password" id="password" placeholder="Digite aqui sua senha" value="senhaSegura" name="password" required>
+                    <input type="password" id="password" placeholder="Digite aqui sua senha" value="123456" name="password" required>
                 </div>
                 <button type="submit">Entrar</button>
                 <p class="register-link">Esqueceu sua senha? <a href="#">Recupere aqui</a></p>
