ajuste na pagina de cadastroUsuario, agora quando for feito o clique na confirmacao sera feito o redirecionamento do jogador para tela de login ajuste na pagina de login, agora quando for feito o clique na confirmacao sera feito o redirecionamento para proxima pagina
criado script de validaToken

--- a/pages/login.html
+++ b/pages/login.html
@@ -14,15 +14,15 @@
             <form id="loginForm">
                 <div class="input-group">
                     <label for="username">Usuário</label>
-                    <input type="text" id="username" placeholder="Digite aqui seu usuário" value="teste" name="username" required>
+                    <input type="text" id="username" placeholder="Digite aqui seu usuário" value="usuario1" name="username" required>
                 </div>
                 <div class="input-group">
                     <label for="password">Senha</label>
-                    <input type="password" id="password" placeholder="Digite aqui sua senha" value="123456" name="password" required>
+                    <input type="password" id="password" placeholder="Digite aqui sua senha" value="senhaSegura" name="password" required>
                 </div>
                 <button type="submit">Entrar</button>
                 <p class="register-link">Esqueceu sua senha? <a href="#">Recupere aqui</a></p>
-                <p class="register-link">Não tem uma conta? <a href="#">Cadastre-se</a></p>
+                <p class="register-link">Não tem uma conta? <a href="cadastroUsuario.html">Cadastre-se</a></p>
             </form>
         </div>
     </div>
