--- a/pages/selecaoDigimon.html
+++ b/pages/selecaoDigimon.html
@@ -7,6 +7,7 @@
     <title>Escolha seu Digimon</title>
     <link href="../css/selecaoDigimon.css" rel="stylesheet" type="text/css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script defer src="../js/validaToken.js"></script>
     <script defer src="../js/selecaoDigimon.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
