--- a/pages/continuarJornada.html
+++ b/pages/continuarJornada.html
@@ -38,7 +38,7 @@
     </div>
     <script defer src="../js/validaToken.js"></script>
     <script defer src="../js/continuarJornada.js"></script>
-    <script src="./scripts/botaoEscolherDigimon.js"></script>
+    <!--<script src="./scripts/botaoEscolherDigimon.js"></script>-->
 </body>
 
 </html>
