--- a/pages/login.html
+++ b/pages/login.html
@@ -21,7 +21,7 @@
                     <input type="password" id="password" placeholder="Digite aqui sua senha" value="senhaSegura" name="password" required>
                 </div>
                 <button type="submit">Entrar</button>
-                <p class="register-link">Esqueceu sua senha? <a href="#">Recupere aqui</a></p>
+                <p class="register-link">Esqueceu sua senha? <a href="recuperarSenha.html">Recupere aqui</a></p>
                 <p class="register-link">Não tem uma conta? <a href="cadastroUsuario.html">Cadastre-se</a></p>
             </form>
         </div>
