--- a/pages/continuarJornada.html
+++ b/pages/continuarJornada.html
@@ -39,6 +39,7 @@
     <script defer src="../js/validaToken.js"></script>
     <script defer src="../js/continuarJornada.js"></script>
     <script defer src="../js/logout.js"></script>
+    <script defer src="../js/botaoEscolherDigimon.js"></script>
     <!--<script src="./scripts/botaoEscolherDigimon.js"></script>-->
 </body>
 
