migracao do script para carregar barras de vida e energia migracao do script para fazer funcionar o botao de selecao digimon na coluna lateral esquerda das telas migracao do script para carregar a pagina de status

--- a/pages/status.html
+++ b/pages/status.html
@@ -354,11 +354,11 @@
     </div>
     <script defer src="../js/validaToken.js"></script>
     <script defer src="../js/carregarImagemLateral.js"></script>
-    <script defer src="./scripts/carregarLifeEnergyBar2.js"></script>
+    <script defer src="../js/carregarBarrasVidaEnergia.js"></script>
     <script defer src="./scripts/carregarPremium2.js"></script>
-    <script defer src="./scripts/status_scripts.js"></script>
-    <script src="./scripts/botaoLogout.js"></script>
-    <script src="./scripts/botaoSelecaoDigimon.js"></script>
+    <script defer src="../js/status.js"></script>
+    <script src="../js/logout.js"></script>
+    <script src="../js/botaoSelecaoDigimon.js"></script>
     <script>
         // Seleciona o botão de toggle e o container do menu
         const menuToggle = document.getElementById("menu-toggle");
