migrado serviço de premium

--- a/pages/status.html
+++ b/pages/status.html
@@ -355,7 +355,7 @@
     <script defer src="../js/validaToken.js"></script>
     <script defer src="../js/carregarImagemLateral.js"></script>
     <script defer src="../js/carregarBarrasVidaEnergia.js"></script>
-    <script defer src="./scripts/carregarPremium2.js"></script>
+    <script defer src="../js/carregarPremium.js"></script>
     <script defer src="../js/status.js"></script>
     <script src="../js/logout.js"></script>
     <script src="../js/botaoSelecaoDigimon.js"></script>
