--- a/pages/premium.html
+++ b/pages/premium.html
@@ -129,12 +129,14 @@
 
             </div>
         </div>
-        <script defer src="./scripts/carregarImagemDigimon2.js"></script>
-        <script defer src="./scripts/carregarLifeEnergyBar2.js"></script>
-        <script defer src="./scripts/carregarPremium2.js"></script>
+        <script defer src="../js/validaToken.js"></script>
+        <script defer src="../js/carregarImagemLateral.js"></script>
+        <script defer src="../js/carregarBarrasVidaEnergia.js"></script>
+        <script defer src="../js/carregarPremium.js"></script>
+        <script defer src="../js/premium.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script src="./scripts/premium.js"></script>
-        <script src="./scripts/botaoLogout.js"></script>
+        <script src="../js/logout.js"></script>
+        <script src="../js/botaoSelecaoDigimon.js"></script>
         <script>
             // Seleciona o botão de toggle e o container do menu
             const menuToggle = document.getElementById("menu-toggle");
