ajuste final do desenvolvimento das funcionalidades de escolher digitama + chocar digitama + continuar jornada + carregar tela de status

--- a/pages/continuarJornada.html
+++ b/pages/continuarJornada.html
@@ -26,7 +26,7 @@
             <p>Digimons Ativos: <span id="digimonStatus">0/0</span></p>
         </div>
         <button id="escolherDigimonBtn" class="escolher-digimon-btn" style="display: none;" onclick="escolherNovoDigimon()">
-            Escolher Novo Digimon
+            Escolher Nova Digitama
         </button>
     </div>
     
