--- a/pages/status.html
+++ b/pages/status.html
@@ -131,19 +131,27 @@
                             <td colspan="2" id="apelido_digimon"></td>
                         </tr>
                         <tr>
-                            <td>Digimon Estagio 1:</td>
+                            <td>Digimon Baby 1:</td>
+                            <td colspan="2" id="digimon_estagio_baby1"></td>
+                        </tr>
+                        <tr>
+                            <td>Digimon Baby 2:</td>
+                            <td colspan="2" id="digimon_estagio_baby2"></td>
+                        </tr>
+                        <tr>
+                            <td>Digimon Rookie:</td>
                             <td colspan="2" id="digimon_estagio_1"></td>
                         </tr>
                         <tr>
-                            <td>Digimon Estagio 2:</td>
+                            <td>Digimon Champion:</td>
                             <td colspan="2" id="digimon_estagio_2"></td>
                         </tr>
                         <tr>
-                            <td>Digimon Estagio 3:</td>
+                            <td>Digimon Ultimate:</td>
                             <td colspan="2" id="digimon_estagio_3"></td>
                         </tr>
                         <tr>
-                            <td>Digimon Estagio 4:</td>
+                            <td>Digimon Mega:</td>
                             <td colspan="2" id="digimon_estagio_4"></td>
                         </tr>
                         <tr>
